<resources>
    <string name="app_name">NOTES</string>
    <string name="string_one">NOTEPAD</string>
    <string name="string_two">Create your notes here for further reference</string>
    <string name="string_three">MY NOTES</string>
    <string name="string_four">Shows the list of notes that you have made before</string>
    <string name="enter_your_file_name">Enter your file name</string>
    <string name="enter_your_description_here">Enter your description here...</string>
    <string name="save">SAVE</string>
    <string name="show">SHOW</string>
    <string name="name_of_the_file">NAME OF THE FILE</string>
    <string name="time">TIME</string>
    <string name="dat">DATE</string>


    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="value">FileName<br>53383893</br></string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>
    <string name="upd">UPDATE</string>
    <string name="delef">DELETE FILE</string>
    <string name="doyou">Do you really want to delete this note?</string>
    <string name="can">CANCEL</string>
    <string name="update">UPDATE</string>
    <string name="options">Options</string>
    <string name="set_text_color">Set Text Color</string>
    <string name="set_text_size">Set Text Size</string>
</resources>
