<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/delete"
        android:layout_marginStart="32dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doyou"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textStyle="bold"
            android:textColor="#da1717"
            android:background="#f7f3f3"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/can"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:textColor="#da1717"
            android:background="#f7f3f3"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>