<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_margin="5dp"
            android:id="@+id/txt1"
            android:text="@string/name_of_the_file"
            android:textColor="#000"
            android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt1"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/time"
                android:textColor="#000"
                android:textSize="20sp"
                android:id="@+id/txt2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt1"
                android:layout_toEndOf="@id/txt2"
                android:layout_marginStart="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/txt3"
                android:text="@string/dat"
                android:textSize="20sp"
                android:textColor="#000"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>