<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/first_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/main_image_one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                tools:ignore="ContentDescription"
                android:src="@drawable/note"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/main_image_one"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:id="@+id/main_text_one"
                android:text="@string/string_one"
                android:textStyle="bold"
                android:textColor="#000"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/main_image_one"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_below="@id/main_text_one"
                tools:ignore="SmallSp"
                android:text="@string/string_two"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/second_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/main_image_two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                tools:ignore="ContentDescription"
                android:src="@drawable/remain"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/main_image_two"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:id="@+id/main_text_two"
                android:text="@string/string_three"
                android:textColor="#000"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/main_image_two"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_below="@id/main_text_two"
                tools:ignore="SmallSp"
                android:text="@string/string_four"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>